# libXSGS

./: AUTHORS  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  requests  traces.0  traces.1
demo/: Makefile  Makefile.am  Makefile.in  client  client.c  demo.c  demo.h  dummy  dummy.c  grpmgr.c  server  server.c  user.c
demo/.deps/: client-client.Po  client-demo.Po  dummy-demo.Po  dummy-dummy.Po  server-demo.Po  server-server.Po
demo/.libs/: client  lt-client  lt-server  server
demo/cert_store/: cacert.pem  openercert.pem  servercert.pem  usercert.pem  xsgs_ucert.cert
demo/key_store/: openerkey.pem  serverkey.pem  userkey.pem  xsgs_gpk.key  xsgs_ik.key  xsgs_ok.key  xsgs_ppk.key  xsgs_uk.key
evaluation/: Makefile  Makefile.am  Makefile.in  evaluation  evaluation.c  xsgs_bench.c  xsgs_bench.h  xsgs_eval.c  xsgs_eval.h
evaluation/.deps/: evaluation-evaluation.Po  evaluation-xsgs_bench.Po  evaluation-xsgs_eval.Po
evaluation/.libs/: evaluation  lt-evaluation
evaluation/cert_store/: test-1024.pem
evaluation/curves/: xsgs_curve_d_277699_167_175.param  xsgs_curve_f_158_158.param  xsgs_curve_g_1666603_149_149.param  xsgs_curve_g_4543003_220_231.param
evaluation/key_store/: test-4096.key
include/: Makefile  Makefile.am  Makefile.in  xsgs.h
libxsgs/: Makefile  Makefile.am  Makefile.in  libxsgs.la  libxsgs_la-KeccakF-1600-opt32.lo  libxsgs_la-KeccakNISTInterface.lo  libxsgs_la-KeccakSponge.lo  libxsgs_la-xsgs_arith.lo  libxsgs_la-xsgs_clear.lo  libxsgs_la-xsgs_gen.lo  libxsgs_la-xsgs_hash.lo  libxsgs_la-xsgs_io.lo  libxsgs_la-xsgs_join.lo  libxsgs_la-xsgs_open.lo  libxsgs_la-xsgs_paillier.lo  libxsgs_la-xsgs_revoke.lo  libxsgs_la-xsgs_rsa.lo  libxsgs_la-xsgs_sig.lo  libxsgs_la-xsgs_util.lo  xsgs_arith.c  xsgs_clear.c  xsgs_gen.c  xsgs_hash.c  xsgs_io.c  xsgs_join.c  xsgs_open.c  xsgs_paillier.c  xsgs_revoke.c  xsgs_rsa.c  xsgs_sig.c  xsgs_util.c
libxsgs/.deps/: libxsgs_la-KeccakF-1600-opt32.Plo  libxsgs_la-KeccakNISTInterface.Plo  libxsgs_la-KeccakSponge.Plo  libxsgs_la-xsgs_arith.Plo  libxsgs_la-xsgs_clear.Plo  libxsgs_la-xsgs_gen.Plo  libxsgs_la-xsgs_hash.Plo  libxsgs_la-xsgs_io.Plo  libxsgs_la-xsgs_join.Plo  libxsgs_la-xsgs_open.Plo  libxsgs_la-xsgs_paillier.Plo  libxsgs_la-xsgs_revoke.Plo  libxsgs_la-xsgs_rsa.Plo  libxsgs_la-xsgs_sig.Plo  libxsgs_la-xsgs_util.Plo
libxsgs/.libs/: libxsgs.la  libxsgs.lai  libxsgs.so.0.0.0
sample/: Makefile  Makefile.am  Makefile.in  sample  sample.c
sample/.deps/: sample-sample.Po
sample/.libs/: lt-sample  sample
sample/curves/: xsgs_curve_d_249563_234_252.param  xsgs_curve_d_277699_167_175.param  xsgs_curve_d_277699_175_167.param  xsgs_curve_d_311387_514_522.param  xsgs_curve_f_158_158.param  xsgs_curve_f_254_254.param  xsgs_curve_f_258_258.param  xsgs_curve_f_270_270.param
sample/key_store/: test-2048.key
sha3/: KeccakF-1600-armgcc.s
test/: Makefile  Makefile.am  Makefile.in  test  test.c  xsgs_test.c  xsgs_test.h
test/.deps/: test-test.Po  test-xsgs_test.Po
test/.libs/: lt-test  test
test/cert_store/: test-2048.pem  test-4096.pem  xsgs_ucert.cert
test/curves/: xsgs_curve_d_167_175.param  xsgs_curve_f_158_158.param
test/database/: xsgs_user.db
test/key_store/: test-1024.key  xsgs_gpk.key  xsgs_ik.key  xsgs_ok.key  xsgs_ppk.key  xsgs_uk.key
